k8s/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  namespace: app-prod
  #annotations:
   # kubernetes.io/ingress.class: addon-http-application-routing # شيلها إذا بتستخدم AGIC
spec:
  ingressClassName: nginx # for trying with nginx ingress controller
  rules:
  - host: team5-frontend.sda.aks
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port:
              number: 80
